# toad

./: .clang-format  .gitignore  CMakeLists.txt  bootstrap.py  readme.md
cmake/module/: FindSpdlog.cmake
example/: test_mnist.py  test_mnist_cfg.json
src/: CMakeLists.txt
src/core/: pipeline.py  registry.py  test_pipeline.py  test_registry.py
src/dataset/: mnist_dataset.py
src/dataset/base/: dataset_base.py  image_base_dataset.py
src/toad/: dummy.cpp  logger.hpp  main.cpp
src/toad/command/: base_command.hpp  command_handler.hpp  help_command.hpp
src/toad/mixin/: singleton.hpp
src/toad/registry/: registry.hpp  registry_macro.hpp
test/: CMakeLists.txt  test_registry.cpp
